--- a/Report Tex/Bibliography.tex
+++ b/Report Tex/Bibliography.tex
@@ -6,7 +6,7 @@
 Llyod N. Trefethen, \emph{{T}he definition of numerical analysis}, Cornell University, 1992.
 
 \bibitem{walking_into_the_complex_domain}
-Jithin D. George, Samuel Y. Jung, and Niall M. Mangan, \emph{{W}alking into the complex plane to `order' better time integrators}, https://arxiv.org/abs/2110.04402, 2021.
+Jithin D. George, Samuel Y. Jung, and Niall M. Mangan, \emph{{W}alking into the complex plane to `order' better time integrators}, \url{https://arxiv.org/abs/2110.04402}, 2021.
 
 \bibitem{next}
 Next reference.
