--- a/Report Tex/Section 2: Definitions and Concepts.tex
+++ b/Report Tex/Section 2: Definitions and Concepts.tex
@@ -16,7 +16,7 @@ The function $\phi(t, y(t))$ is the derivative of $y(t)$ with respect to $t$, an
 In the context of numerical methods, we approximate $y'(t)$ by $\frac{y(t+\Delta_t) - y(t)}{\Delta_t}$.\\
 Here, $\Delta_t$ is the time step.\\
 This gives $y(t + \Delta_t) \approx y(t) + \Delta_t y'(t)$; a first-order approximation of $y$ a small time step $\Delta_t$ in the future.\\
-TODO: WHAT IS THE ERROR EXACTLY?
+%TODO: WHAT IS THE ERROR EXACTLY?
 
 \subsection{Complex-Variable Method}
 Take a function $f: \bR \longrightarrow \bR,\; x \longmapsto f(x)$.\\
@@ -24,18 +24,18 @@ Let $f$ be \term{holomorphic} on its domain: $f$ is complex differentiable in a 
 $\forall x$, $f$ is complex differentiable on $B_{\beta}(x) = \{z \in \bC \,|\, |z|-|x| < \beta_{_{\text{small}}}\}$ for some $\beta_{_{\text{small}}} > 0$.\\
 In this case, we get the following fact:\\
 \[f'(x) = \frac{Im\big(f(x+ih)\big)}{h} + O(h^2), \quad \text{where}\; h \in \bR \;\text{and}\; h \neq 0\]\\
-TODO: WHAT IS THE ERROR EXACTLY?
+%TODO: WHAT IS THE ERROR EXACTLY?
 
 \par Combining this with the first order approximation above, we get $y(t + \Delta_t) \approx y(t) + Im\big(y(t+i\Delta_t)\big)$.
 
-TODO: Flesh this out more!
+%TODO: Flesh this out more!
 
 \subsection{Stability}
-In numerical analysis, a method is said to be \term{stable} if small deviations in the input do not lead to large perturbtions in the output.
+\par In numerical analysis, a method is said to be \term{stable} if small deviations in the input do not lead to large perturbtions in the output.
 In the context of differential equations, a method is said to be stable if the solution does not grow to be unbounded as the number of time steps increases.
 
-When solving differential equations numerically, the choice of time step is crucial.
+\par When solving differential equations numerically, the choice of time step is crucial.
 If the step size is too large, the solution may become unstable; the numerical solution will diverge from the analytic solution in proportion with the number of steps.
 If the step size is too small, the solution may be accurate and stable, but the computation may be too slow.
 
-This tradeoff between accuracy and stability is a common theme in numerical analysis, and depends entirely on the choice of numerical method.
+\par This tradeoff between accuracy and stability is a common theme in numerical analysis, and depends entirely on the choice of numerical method.
