--- a/Report Tex/Section 4: Complex Time-Steps.tex
+++ b/Report Tex/Section 4: Complex Time-Steps.tex
@@ -64,7 +64,9 @@ We will have a look at varying $b$ in a subsequent section.\\
 
 \subsubsection{Euler's Forward 2-Step}
 \begin{multicols}{2}
-\includegraphics[height=8cm]{Stability Regions/Graphs/Real VS Complex Comparison/Euler's Forward.png}
+\begin{center}
+\includegraphics[width=0.49\textwidth]{Stability Regions/Graphs/Real VS Complex Comparison/Euler's Forward.png}
+\end{center}
 \columnbreak{}
 
 \textbf{Euler's Forward 2-Step $\bR$}
@@ -93,14 +95,17 @@ The diagram above illustrates the case where $b = a = \frac{\lh}{2}$\\
 \par We can vary the $b$ value to see how the stability region changes.\\
 This series of diagrams shows the stability regions for the complex 2-step method with varying $b$ values.\\
 
-VIDEOS SHOW b BEING VARIED\\
+%VIDEOS SHOW b BEING VARIED\\
 
 \par We can do the same kind of analysis for other Numerical Methods.\\
 Below are the same derivations and diagrams for the Backward Euler and Runge-Kutta 4 methods.\\
+\newpage
 
 \subsubsection{Euler's Backward 2-Step}
 \begin{multicols}{2}
-\includegraphics[height=8cm]{Stability Regions/Graphs/Real VS Complex Comparison/Euler's Backward.png}
+\begin{center}
+\includegraphics[width=0.49\textwidth]{Stability Regions/Graphs/Real VS Complex Comparison/Euler's Backward.png}
+\end{center}
 \columnbreak{}
 
 \textbf{Euler's Backward 2-Step $\bR$}
@@ -122,7 +127,9 @@ Below are the same derivations and diagrams for the Backward Euler and Runge-Kut
 
 \subsubsection{Runge-Kutta 4 2-Step}
 \begin{multicols}{2}
-\includegraphics[height=8cm]{Stability Regions/Graphs/Real VS Complex Comparison/Runge-Kutta 4.png}
+\begin{center}
+\includegraphics[width=0.49\textwidth]{Stability Regions/Graphs/Real VS Complex Comparison/Runge-Kutta 4.png}
+\end{center}
 \columnbreak{}
 
 \textbf{Runge-Kutta 4 2-Step $\bR$}
@@ -136,5 +143,5 @@ Below are the same derivations and diagrams for the Backward Euler and Runge-Kut
 
 \end{multicols}
 
-Computer Calculated Complex - Should probably be checked\\
+Computer Calculated Complex; should probably be checked\\
 $1 + \lh + \frac{\lh^2}{2} + \frac{\lh^3}{6} + \frac{\lh^4}{24} + \frac{\lh^5}{128} + \frac{5 \lh^6}{4608} + \frac{\lh^7}{9216} + \frac{\lh^8}{147456} + \frac{b^2 \lh^3}{48} + \frac{b^2 \lh^4}{128} + \frac{b^2 \lh^5}{768} + \frac{b^2 \lh^6}{9216} + \frac{b^4 \lh}{24} - \frac{b^4 \lh^2}{96} + \frac{b^4 \lh^3}{192} + \frac{b^4 \lh^4}{1536} - \frac{b^6}{72} + \frac{b^6 \lh}{144} + \frac{b^6 \lh^2}{576} + \frac{b^8}{576}$
