Made tex filepaths relative

--- a/Report Tex/report.tex
+++ b/Report Tex/report.tex
@@ -17,7 +17,7 @@
 \hbadness=10000
 
 % Set up Diagram Paths
-\graphicspath{{/home/puca/University/Senior Sophister/Capstone/Graphs}}
+\graphicspath{{../Graphs}}
 
 \input{commands.tex} % file with useful abbreviations
 
