--- a/Report Tex/Bibliography.tex
+++ b/Report Tex/Bibliography.tex
@@ -8,6 +8,9 @@ Llyod N. Trefethen, \emph{{T}he definition of numerical analysis}, Cornell Unive
 \bibitem{walking_into_the_complex_domain}
 Jithin D. George, Samuel Y. Jung, and Niall M. Mangan, \emph{{W}alking into the complex plane to `order' better time integrators}, \url{https://arxiv.org/abs/2110.04402}, 2021.
 
+\bibitem{GitHub_Repo}
+The GitHub repository for this project, \url{https://github.com/CianJDuggan/Capstone-Project}
+
 \bibitem{next}
 Next reference.
 
