Been too long since last commit - edits everywhere!

--- a/Report Tex/Section 3: Stability Analysis.tex
+++ b/Report Tex/Section 3: Stability Analysis.tex
@@ -103,7 +103,7 @@ Euler's Forward Method has the stability function
 \[s(\lambda, h) = 1 + \lh\]
 The corresponding stability region is 
 \[S = \Big\{ (\lambda, h) \;\Big|\; |1 + \lh| < 1\Big\}\]
-We can see this region plotted in red on the right; a unit circle centred at $-1$.\\
+We can see this region plotted in red on the right; an open unit circle centred at $-1$.\\
 For a given $\lambda \in \bC$, the method is stable for any step-size $h \in \bR$ such that $|1 + \lh| < 1$.\\
 Expanding $\lambda = a + bi$, we get the restriction
 \[|1 + (a + bi)h| < 1 \quad \implies \quad a^2h^2 + 2ah + b^2h^2 < 0\]
