--- a/Report Tex/commands.tex
+++ b/Report Tex/commands.tex
@@ -1,3 +1,5 @@
+\newtheorem{theorem}{Theorem}[section]
+
 % Auxiliary commands
 \DeclareMathSymbol{:}{\mathpunct}{operators}{"3A}%semicolon spaces
 \RequirePackage{xspace}
@@ -29,4 +31,3 @@
 \def\ang#1{\left\langle#1\right\rangle}
 \def\n#1{\left\lvert#1\right\rvert}
 \def\nn#1{\left\lVert#1\right\rVert}
-\def\eq#1{\begin{equation}#1\end{equation}}
