Lots of tweaks. Proposal document added.

--- a/Report Tex/Section 1: Introduction.tex
+++ b/Report Tex/Section 1: Introduction.tex
@@ -1,5 +1,5 @@
 \section{Introduction}
-\par A paper by Lloyd N. Trefethen \cite{trefethen_definition} offers two definitions of numerical analysis:
+\par A paper by Lloyd N. Trefethen~\cite{trefethen_definition} offers two definitions of numerical analysis:
 \begin{quote}
     \textit{The study of rounding errors.}
 \end{quote}
@@ -16,4 +16,14 @@ Through my work on this paper, I have honed my own definition:
 	\textit{Numerical analysis is the field which attempts to straddle the gaps between the discrete and the continuous.}
 \end{quote}
 
-In this paper we will take a look at the stability of various numerical methods when applied to problems of differential calculus. In particular, we wish to compare the use of complex time steps with real time steps for these methods.
+In this paper we will take a look at the stability of various numerical methods when applied to problems of differential calculus.\\
+In particular, we wish to:
+\begin{itemize}
+	\item Establish the Exponential Decay Problem as the toy problem for analysis.
+	\item Define stability, and its associated concepts, in the context of numerical analysis.
+	\item Establish the concept of Complex time steps for numerical methods.
+	\item Develop a framework for the analysis of the stability of numerical methods.
+	\item Apply this framework to particular numerical methods.
+	\item Expand upon the results of this to contrast the stability regions for Real and Complex time steps.
+	\item MORE?
+\end{itemize}
