Split section 3, expanded material on exponential decay, added interpretation of stability graphs

--- a/Report Tex/Section 1: Introduction.tex
+++ b/Report Tex/Section 1: Introduction.tex
@@ -19,11 +19,12 @@ Through my work on this paper, I have honed my own definition:
 In this paper we will take a look at the stability of various numerical methods when applied to problems of differential calculus.\\
 In particular, we wish to:
 \begin{itemize}
-	\item Establish the Exponential Decay Problem as the toy problem for analysis.
-	\item Define stability, and its associated concepts, in the context of numerical analysis.
-	\item Establish the concept of Complex time steps for numerical methods.
-	\item Develop a framework for the analysis of the stability of numerical methods.
-	\item Apply this framework to particular numerical methods.
-	\item Expand upon the results of this to contrast the stability regions for Real and Complex time steps.
-	\item MORE?
+	\item[$\cdot$] Introduce key terminology and concepts in the field of numerical analysis.
+	\item[$\cdot$] Establish the Exponential Decay Problem as the toy problem for analysis.
+	\item[$\cdot$] Define stability, and its associated concepts, in the context of numerical analysis.
+	\item[$\cdot$] Establish the concept of Complex time steps for numerical methods.
+	\item[$\cdot$] Develop a framework for the analysis of the stability of numerical methods.
+	\item[$\cdot$] Apply this framework to particular numerical methods.
+	\item[$\cdot$] Expand upon the results of this to contrast the stability regions for Real and Complex time steps.
+	\item[$\cdot$] MORE?
 \end{itemize}
