--- a/Report Tex/report.tex
+++ b/Report Tex/report.tex
@@ -29,9 +29,11 @@
 \newpage
 \input{Section 2: Definitions and Concepts.tex}
 \newpage
-\input{Section 3: Stability Analysis.tex}
+\input{Section 3: Exponential Decay.tex}
 \newpage
-\input{Section 4: Complex Time-Steps.tex}
+\input{Section 4: Stability Analysis.tex}
+\newpage
+\input{Section 5: Complex Time-Steps.tex}
 \newpage
 \input{Bibliography.tex} % bibliography
 
