--- a/Report/Section 3: Exponential Decay.tex
+++ b/Report/Section 3: Exponential Decay.tex
@@ -16,6 +16,7 @@ This poses no lack of generality, as we can always scale the solution by any ini
 \par The exact solution we will consider is \[y(t) = e^{\lambda t}\]\\
 
 \subsection{A Graphical Representation}
+Appendix~\ref{appendix:exact} contains the Python for these graphs.
 \begin{multicols}{2}
 \begin{center}
 \includegraphics[width=0.4\textwidth]{Exponential Decay/Exact with -1.png}
