--- a/Report/report.tex
+++ b/Report/report.tex
@@ -8,6 +8,7 @@
 \usepackage[none]{hyphenat}  % Prevent hyphenation
 \usepackage{microtype} % Improves spacing
 \usepackage{listings} % code listings
+\usepackage[toc,page]{appendix} % appendix
 
 \setlength{\parindent}{0pt} % Set the indent for new paragraphs to 0
 \setlength{\mathindent}{0pt} % Set the indent for equations to 0
@@ -36,8 +37,9 @@
 \newpage
 \input{Section 5: Complex Time-Steps.tex}
 \newpage
+\input{Section 6: Conclusions.tex}
+\newpage
 \input{Bibliography.tex} % bibliography
 \newpage
-\input{Section X: Appendix.tex} % appendix
-
+\input{Appendix.tex} % appendix
 \end{document}
